todo - Figure out what this does

--- a/cdn/index.html
+++ b/cdn/index.html
@@ -24,6 +24,10 @@
 </head>
 <body>
 	<svg-js game=universe moveable reference-frame=inertial></svg-js>
+	
+	<!-- <script type="production"  src="https://my-cdn.surge.sh/scripts/elements/svg-js/element.js"></script> -->
 	<script type="module" src="scripts/elements/svg-js/element.js"></script>
+
+	<script type="module" src="https://my-cdn.surge.sh/scripts/dev-mode/import.min.js"></script>
 </body>
 </html>
